[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/gms_map.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/room_picker.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/parallax_preview.gd" type="Script" id=3]
[ext_resource path="res://scenes/parallax_view_controller.gd" type="Script" id=4]

[node name="parallax_preview" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="map_controller" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 254.0
focus_mode = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="gms_map" parent="map_controller" instance=ExtResource( 1 )]
show_behind_parent = true

[node name="room_picker" parent="." instance=ExtResource( 2 )]

[connection signal="focus_entered" from="map_controller" to="map_controller" method="on_focus_gain"]
[connection signal="focus_exited" from="map_controller" to="map_controller" method="on_focus_loss"]
[connection signal="mouse_entered" from="map_controller" to="map_controller" method="on_mouse_enter"]
[connection signal="mouse_exited" from="map_controller" to="map_controller" method="on_mouse_exit"]
[connection signal="layer_selected" from="room_picker" to="." method="on_layer_selected"]
[connection signal="room_selected" from="room_picker" to="." method="on_room_select"]
